test/test_11912921_4.out
Error type 2 at Line 20: a function is invoked without a definition: powerOn
