test/test_11912921_4.spl
struct Pokemon
{
    char name[20];
    int hp;
};

int Hit(struct Pokemon poke)
{
    poke.hp = poke.hp-5;
    return 0;
}

int test_4()
{
    struct Pokemon pokes;
    powerOn(pokes);
    return 0;
}
